sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:8: error: ')' expected but 'else' found.
		else{
                ^AlgGnomeSort:21: error: Unmatched closing brace '}' ignored here
}
^